# ngram

./: .gitignore  CMakeLists.txt  README.md  build_index.cpp  common.h  load_csv.cpp  load_index.cpp  main.cpp  makefile  utils.cpp
cmake/: macros.cmake
data/: queries
include/: common.hpp  constants.hpp  indexer.hpp  main.hpp  searcher.hpp
include/ngram/: common.hpp  constants.hpp  indexer.hpp  main.hpp  searcher.hpp
lib/: readme
lib/ngram/: config.cpp  config.hpp  initializer.cpp  initializer.hpp  logger.hpp  query_fetcher.cpp  query_fetcher.hpp  reader.cpp  reader.hpp  utils.hpp  writter.cpp  writter.hpp
source/: build_index.cpp  common.h  load_csv.cpp  load_index.cpp  load_record.cpp  main.cpp  makefile  search.cpp  utils.cpp
source/components/reader/: reader.cpp
source/components/utils/: utils.cpp  utils.hpp
source/headers/: build_index.hpp  common.hpp  constants.hpp  load_csv.hpp  load_index.hpp  load_record.hpp  main.hpp  utils.hpp
source_/: build_index.cpp  common.h  load_csv.cpp
src/: CMakeLists.txt  build_index.cpp  load_csv.cpp  load_index.cpp  load_record.cpp  main.cpp  main.hpp  search.cpp
src/common/: common.hpp  constants.hpp
src/components/indexer/: indexer.cpp  indexer.hpp
src/components/indexer/methods/: build_index.cc  load_csv.cc  load_index.cc
src/components/initializer/: initializer.cpp  initializer.hpp
src/components/logger/: logger.cpp  logger.hpp
src/components/reader/: reader.hpp
src/components/searcher/: searcher.cpp  searcher.hpp
src/components/searcher/methods/: load_record.cc  search.cc
src/components/utils/: utils.hpp
src/components/writter/: writter.cpp  writter.hpp
src/config/: config.cpp  config.hpp
src/headers/: common.hpp  constants.hpp  load_csv.hpp  main.hpp  search.hpp
src/indexer/: indexer.cpp  indexer.hpp
src/indexer/methods/: build_index.cc  load_csv.cc  load_index.cc
src/searcher/: searcher.cpp  searcher.hpp
src/searcher/methods/: load_record.cc  search.cc
src/shared/: config.cpp  config.hpp  initializer.hpp  logger.hpp  query_fetcher.hpp  reader.cpp  reader.hpp  readme.md  utils.hpp  writter.hpp
test/: hello_test.cpp  main.cpp  ngram_test.cpp
test/data/: expected_results
test/include/fixtures/: argument.hpp  config.hpp  indexer.hpp  initializer.hpp  searcher.hpp  utils_available_key.hpp
test/include/utils/: constants.hpp  utils.hpp
test/ngram/: config.hpp  indexer.hpp  initializer.hpp  searcher.hpp  utils.hpp
